--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # 环境变量示例文件
 # 复制此文件为 .env 并填入实际值
 
-# API 基础 URL
-VITE_API_BASE_URL=http://your-api-server.com:8000
+# API 基础 URL - 开发环境留空使用相对路径，生产环境也留空使用相对路径
+VITE_API_BASE_URL=
