--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev:test": "vite --host 0.0.0.0",
-     "dev": "vite --port 3000",
+    "dev": "vite --port 3000",
     "build": "tsc -b && vite build --outDir dist",
     "lint": "bunx tsc --noEmit && bunx biome lint --write",
     "format": "bunx biome format --write",
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.34",
+    "date-fns": "^4.1.0",
     "react": "^18.3.1",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.7.0",
     "same-runtime": "^0.0.1",
@@ -23,6 +25,7 @@
     "@biomejs/biome": "1.9.4",
     "@eslint/js": "^9.27.0",
     "@types/react": "^18.3.22",
+    "@types/react-date-range": "^1.4.10",
     "@types/react-dom": "^18.3.7",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
