--- a/ai.speed.front.nginx.conf
+++ b/ai.speed.front.nginx.conf
@@ -8,7 +8,10 @@ server {
         try_files $uri /index.html;
     }
 
-
+    ssl_certificate     /etc/nginx/ssl/aispeed.8lab.cn.pem;
+    ssl_certificate_key /etc/nginx/ssl/aispeed.8lab.cn.key;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
 
     location /api/ {
         proxy_pass http://172.19.23.171:41010;
