--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     container_name: ai.speed.front
     restart: always
     ports:
-      - 41011:80
+      - 443:443
+        # - 41011:80
     volumes:
       - /data/waveSpeedClone/ai.speed.front.nginx.conf:/etc/nginx/conf.d/ai.speed.nginx.conf
+      - /data/waveSpeedClone/ssl:/etc/nginx/ssl
