--- a/ai.speed.front.nginx.conf
+++ b/ai.speed.front.nginx.conf
@@ -1,6 +1,7 @@
+root@node140:/data/waveSpeedClone# cat ai.speed.front.nginx.conf
 server {
-    listen 80;
-    server_name 47.242.127.155;
+    listen 443;
+    server_name aispeed.8lab.cn 47.242.127.155;
 
     root /usr/share/nginx/html;
     index index.html index.htm;
