--- a/ai.speed.front.nginx.conf
+++ b/ai.speed.front.nginx.conf
@@ -27,6 +27,21 @@ server {
         add_header Access-Control-Expose-Headers 'Content-Length,Content-Range';
     }
 
+    # 反向代理官方文档：/docs -> https://wavespeed.ai/docs
+    location ^~ /docs/ {
+        proxy_pass https://wavespeed.ai$request_uri;
+        proxy_set_header Host wavespeed.ai;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host  $host;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_cookie_domain wavespeed.ai $host;
+
+        # 可选缓存与压缩
+        proxy_read_timeout 60s;
+        gzip on;
+        gzip_types text/plain text/css application/json application/javascript application/xml+rss image/svg+xml;
+    }
+
     # 处理 50x 错误页面
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
