--- a/ai.speed.front.nginx.conf
+++ b/ai.speed.front.nginx.conf
@@ -29,17 +29,42 @@ server {
 
     # 反向代理官方文档：/docs -> https://wavespeed.ai/docs
     location ^~ /docs/ {
-        proxy_pass https://wavespeed.ai$request_uri;
+        proxy_pass https://wavespeed.ai/docs/docs;
         proxy_set_header Host wavespeed.ai;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host  $host;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-        proxy_cookie_domain wavespeed.ai $host;
-
-        # 可选缓存与压缩
+        proxy_set_header X-Forwarded-Host $host;
+        
+        # SSL 相关设置
+        proxy_ssl_verify off;
+        proxy_ssl_server_name on;
+        
+        # 超时设置
+        proxy_connect_timeout 30s;
+        proxy_send_timeout 30s;
         proxy_read_timeout 60s;
-        gzip on;
-        gzip_types text/plain text/css application/json application/javascript application/xml+rss image/svg+xml;
+        
+        # 缓冲设置
+        proxy_buffering on;
+        proxy_buffer_size 4k;
+        proxy_buffers 8 4k;
+        
+        # 处理重定向
+        proxy_redirect off;
+        
+        # 处理 cookies
+        proxy_cookie_domain wavespeed.ai $host;
+        proxy_cookie_path /docs/ /docs/;
+        
+        # 错误处理
+        proxy_intercept_errors on;
+        error_page 502 503 504 = @fallback;
+    }
+    
+    # 代理失败时的回退处理
+    location @fallback {
+        return 302 https://wavespeed.ai/docs/docs;
     }
 
     # 处理 50x 错误页面
