--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@types/styled-components": "^5.1.34",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.546.0",
     "react": "^18.3.1",
     "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
