--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   "dependencies": {
     "@types/styled-components": "^5.1.34",
     "date-fns": "^4.1.0",
+    "i18next": "^25.6.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.546.0",
     "react": "^18.3.1",
     "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^16.1.5",
     "react-router-dom": "^7.7.0",
     "same-runtime": "^0.0.1",
     "styled-components": "^6.1.19"
